A2/Scrapper/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABBR
    BRACKETS
    C
    CLOSEABBR
    CLOSEBRACKETS
    GARBAGE
    VC

Grammar

Rule 0     S' -> start
Rule 1     start -> init
Rule 2     init -> before BEGINSQUAD skip OPENBODY rows CLOSEBODY
Rule 3     before -> CONTENT before
Rule 4     before -> OPENBODY before
Rule 5     before -> CLOSEBODY before
Rule 6     before -> OPENHEAD before
Rule 7     before -> CLOSEHEAD before
Rule 8     before -> OPENDATA before
Rule 9     before -> CLOSEDATA before
Rule 10    before -> OPENHREF before
Rule 11    before -> CLOSEHREF before
Rule 12    before -> OPENROW before
Rule 13    before -> CLOSEROW before
Rule 14    before -> <empty>
Rule 15    rows -> OPENROW OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD CLOSEROW rows
Rule 16    rows -> OPENROW columns CLOSEROW rows
Rule 17    rows -> <empty>
Rule 18    columns -> OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENHEAD OPENHREF CONTENT CLOSEHREF CLOSEHEAD OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA
Rule 19    columns -> OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENHEAD OPENHREF CONTENT CLOSEHREF CONTENT skip CLOSEHEAD OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA
Rule 20    columns -> OPENDATA CLOSEDATA
Rule 21    skip -> CONTENT skip
Rule 22    skip -> OPENHREF skip
Rule 23    skip -> CLOSEHREF skip
Rule 24    skip -> <empty>

Terminals, with rules where they appear

ABBR                 : 
BEGINSQUAD           : 2
BRACKETS             : 
C                    : 
CLOSEABBR            : 
CLOSEBODY            : 2 5
CLOSEBRACKETS        : 
CLOSEDATA            : 9 18 18 18 18 18 18 19 19 19 19 19 19 20
CLOSEHEAD            : 7 15 15 15 15 15 15 15 18 19
CLOSEHREF            : 11 18 19 23
CLOSEROW             : 13 15 16
CONTENT              : 3 15 15 15 15 15 15 15 18 19 19 21
GARBAGE              : 
OPENBODY             : 2 4
OPENDATA             : 8 18 18 18 18 18 18 19 19 19 19 19 19 20
OPENHEAD             : 6 15 15 15 15 15 15 15 18 19
OPENHREF             : 10 18 19 22
OPENROW              : 12 15 16
VC                   : 
error                : 

Nonterminals, with rules where they appear

before               : 2 3 4 5 6 7 8 9 10 11 12 13
columns              : 16
init                 : 1
rows                 : 2 15 16
skip                 : 2 18 18 18 18 18 18 19 19 19 19 19 19 19 21 22 23
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . init
    (2) init -> . before BEGINSQUAD skip OPENBODY rows CLOSEBODY
    (3) before -> . CONTENT before
    (4) before -> . OPENBODY before
    (5) before -> . CLOSEBODY before
    (6) before -> . OPENHEAD before
    (7) before -> . CLOSEHEAD before
    (8) before -> . OPENDATA before
    (9) before -> . CLOSEDATA before
    (10) before -> . OPENHREF before
    (11) before -> . CLOSEHREF before
    (12) before -> . OPENROW before
    (13) before -> . CLOSEROW before
    (14) before -> .

    CONTENT         shift and go to state 6
    OPENBODY        shift and go to state 4
    CLOSEBODY       shift and go to state 5
    OPENHEAD        shift and go to state 7
    CLOSEHEAD       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENHREF        shift and go to state 11
    CLOSEHREF       shift and go to state 12
    OPENROW         shift and go to state 13
    CLOSEROW        shift and go to state 14
    BEGINSQUAD      reduce using rule 14 (before -> .)

    start                          shift and go to state 1
    init                           shift and go to state 2
    before                         shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (1) start -> init .

    $end            reduce using rule 1 (start -> init .)


state 3

    (2) init -> before . BEGINSQUAD skip OPENBODY rows CLOSEBODY

    BEGINSQUAD      shift and go to state 15


state 4

    (4) before -> OPENBODY . before
    (3) before -> . CONTENT before
    (4) before -> . OPENBODY before
    (5) before -> . CLOSEBODY before
    (6) before -> . OPENHEAD before
    (7) before -> . CLOSEHEAD before
    (8) before -> . OPENDATA before
    (9) before -> . CLOSEDATA before
    (10) before -> . OPENHREF before
    (11) before -> . CLOSEHREF before
    (12) before -> . OPENROW before
    (13) before -> . CLOSEROW before
    (14) before -> .

    CONTENT         shift and go to state 6
    OPENBODY        shift and go to state 4
    CLOSEBODY       shift and go to state 5
    OPENHEAD        shift and go to state 7
    CLOSEHEAD       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENHREF        shift and go to state 11
    CLOSEHREF       shift and go to state 12
    OPENROW         shift and go to state 13
    CLOSEROW        shift and go to state 14
    BEGINSQUAD      reduce using rule 14 (before -> .)

    before                         shift and go to state 16

state 5

    (5) before -> CLOSEBODY . before
    (3) before -> . CONTENT before
    (4) before -> . OPENBODY before
    (5) before -> . CLOSEBODY before
    (6) before -> . OPENHEAD before
    (7) before -> . CLOSEHEAD before
    (8) before -> . OPENDATA before
    (9) before -> . CLOSEDATA before
    (10) before -> . OPENHREF before
    (11) before -> . CLOSEHREF before
    (12) before -> . OPENROW before
    (13) before -> . CLOSEROW before
    (14) before -> .

    CONTENT         shift and go to state 6
    OPENBODY        shift and go to state 4
    CLOSEBODY       shift and go to state 5
    OPENHEAD        shift and go to state 7
    CLOSEHEAD       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENHREF        shift and go to state 11
    CLOSEHREF       shift and go to state 12
    OPENROW         shift and go to state 13
    CLOSEROW        shift and go to state 14
    BEGINSQUAD      reduce using rule 14 (before -> .)

    before                         shift and go to state 17

state 6

    (3) before -> CONTENT . before
    (3) before -> . CONTENT before
    (4) before -> . OPENBODY before
    (5) before -> . CLOSEBODY before
    (6) before -> . OPENHEAD before
    (7) before -> . CLOSEHEAD before
    (8) before -> . OPENDATA before
    (9) before -> . CLOSEDATA before
    (10) before -> . OPENHREF before
    (11) before -> . CLOSEHREF before
    (12) before -> . OPENROW before
    (13) before -> . CLOSEROW before
    (14) before -> .

    CONTENT         shift and go to state 6
    OPENBODY        shift and go to state 4
    CLOSEBODY       shift and go to state 5
    OPENHEAD        shift and go to state 7
    CLOSEHEAD       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENHREF        shift and go to state 11
    CLOSEHREF       shift and go to state 12
    OPENROW         shift and go to state 13
    CLOSEROW        shift and go to state 14
    BEGINSQUAD      reduce using rule 14 (before -> .)

    before                         shift and go to state 18

state 7

    (6) before -> OPENHEAD . before
    (3) before -> . CONTENT before
    (4) before -> . OPENBODY before
    (5) before -> . CLOSEBODY before
    (6) before -> . OPENHEAD before
    (7) before -> . CLOSEHEAD before
    (8) before -> . OPENDATA before
    (9) before -> . CLOSEDATA before
    (10) before -> . OPENHREF before
    (11) before -> . CLOSEHREF before
    (12) before -> . OPENROW before
    (13) before -> . CLOSEROW before
    (14) before -> .

    CONTENT         shift and go to state 6
    OPENBODY        shift and go to state 4
    CLOSEBODY       shift and go to state 5
    OPENHEAD        shift and go to state 7
    CLOSEHEAD       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENHREF        shift and go to state 11
    CLOSEHREF       shift and go to state 12
    OPENROW         shift and go to state 13
    CLOSEROW        shift and go to state 14
    BEGINSQUAD      reduce using rule 14 (before -> .)

    before                         shift and go to state 19

state 8

    (7) before -> CLOSEHEAD . before
    (3) before -> . CONTENT before
    (4) before -> . OPENBODY before
    (5) before -> . CLOSEBODY before
    (6) before -> . OPENHEAD before
    (7) before -> . CLOSEHEAD before
    (8) before -> . OPENDATA before
    (9) before -> . CLOSEDATA before
    (10) before -> . OPENHREF before
    (11) before -> . CLOSEHREF before
    (12) before -> . OPENROW before
    (13) before -> . CLOSEROW before
    (14) before -> .

    CONTENT         shift and go to state 6
    OPENBODY        shift and go to state 4
    CLOSEBODY       shift and go to state 5
    OPENHEAD        shift and go to state 7
    CLOSEHEAD       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENHREF        shift and go to state 11
    CLOSEHREF       shift and go to state 12
    OPENROW         shift and go to state 13
    CLOSEROW        shift and go to state 14
    BEGINSQUAD      reduce using rule 14 (before -> .)

    before                         shift and go to state 20

state 9

    (8) before -> OPENDATA . before
    (3) before -> . CONTENT before
    (4) before -> . OPENBODY before
    (5) before -> . CLOSEBODY before
    (6) before -> . OPENHEAD before
    (7) before -> . CLOSEHEAD before
    (8) before -> . OPENDATA before
    (9) before -> . CLOSEDATA before
    (10) before -> . OPENHREF before
    (11) before -> . CLOSEHREF before
    (12) before -> . OPENROW before
    (13) before -> . CLOSEROW before
    (14) before -> .

    CONTENT         shift and go to state 6
    OPENBODY        shift and go to state 4
    CLOSEBODY       shift and go to state 5
    OPENHEAD        shift and go to state 7
    CLOSEHEAD       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENHREF        shift and go to state 11
    CLOSEHREF       shift and go to state 12
    OPENROW         shift and go to state 13
    CLOSEROW        shift and go to state 14
    BEGINSQUAD      reduce using rule 14 (before -> .)

    before                         shift and go to state 21

state 10

    (9) before -> CLOSEDATA . before
    (3) before -> . CONTENT before
    (4) before -> . OPENBODY before
    (5) before -> . CLOSEBODY before
    (6) before -> . OPENHEAD before
    (7) before -> . CLOSEHEAD before
    (8) before -> . OPENDATA before
    (9) before -> . CLOSEDATA before
    (10) before -> . OPENHREF before
    (11) before -> . CLOSEHREF before
    (12) before -> . OPENROW before
    (13) before -> . CLOSEROW before
    (14) before -> .

    CONTENT         shift and go to state 6
    OPENBODY        shift and go to state 4
    CLOSEBODY       shift and go to state 5
    OPENHEAD        shift and go to state 7
    CLOSEHEAD       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENHREF        shift and go to state 11
    CLOSEHREF       shift and go to state 12
    OPENROW         shift and go to state 13
    CLOSEROW        shift and go to state 14
    BEGINSQUAD      reduce using rule 14 (before -> .)

    before                         shift and go to state 22

state 11

    (10) before -> OPENHREF . before
    (3) before -> . CONTENT before
    (4) before -> . OPENBODY before
    (5) before -> . CLOSEBODY before
    (6) before -> . OPENHEAD before
    (7) before -> . CLOSEHEAD before
    (8) before -> . OPENDATA before
    (9) before -> . CLOSEDATA before
    (10) before -> . OPENHREF before
    (11) before -> . CLOSEHREF before
    (12) before -> . OPENROW before
    (13) before -> . CLOSEROW before
    (14) before -> .

    CONTENT         shift and go to state 6
    OPENBODY        shift and go to state 4
    CLOSEBODY       shift and go to state 5
    OPENHEAD        shift and go to state 7
    CLOSEHEAD       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENHREF        shift and go to state 11
    CLOSEHREF       shift and go to state 12
    OPENROW         shift and go to state 13
    CLOSEROW        shift and go to state 14
    BEGINSQUAD      reduce using rule 14 (before -> .)

    before                         shift and go to state 23

state 12

    (11) before -> CLOSEHREF . before
    (3) before -> . CONTENT before
    (4) before -> . OPENBODY before
    (5) before -> . CLOSEBODY before
    (6) before -> . OPENHEAD before
    (7) before -> . CLOSEHEAD before
    (8) before -> . OPENDATA before
    (9) before -> . CLOSEDATA before
    (10) before -> . OPENHREF before
    (11) before -> . CLOSEHREF before
    (12) before -> . OPENROW before
    (13) before -> . CLOSEROW before
    (14) before -> .

    CONTENT         shift and go to state 6
    OPENBODY        shift and go to state 4
    CLOSEBODY       shift and go to state 5
    OPENHEAD        shift and go to state 7
    CLOSEHEAD       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENHREF        shift and go to state 11
    CLOSEHREF       shift and go to state 12
    OPENROW         shift and go to state 13
    CLOSEROW        shift and go to state 14
    BEGINSQUAD      reduce using rule 14 (before -> .)

    before                         shift and go to state 24

state 13

    (12) before -> OPENROW . before
    (3) before -> . CONTENT before
    (4) before -> . OPENBODY before
    (5) before -> . CLOSEBODY before
    (6) before -> . OPENHEAD before
    (7) before -> . CLOSEHEAD before
    (8) before -> . OPENDATA before
    (9) before -> . CLOSEDATA before
    (10) before -> . OPENHREF before
    (11) before -> . CLOSEHREF before
    (12) before -> . OPENROW before
    (13) before -> . CLOSEROW before
    (14) before -> .

    CONTENT         shift and go to state 6
    OPENBODY        shift and go to state 4
    CLOSEBODY       shift and go to state 5
    OPENHEAD        shift and go to state 7
    CLOSEHEAD       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENHREF        shift and go to state 11
    CLOSEHREF       shift and go to state 12
    OPENROW         shift and go to state 13
    CLOSEROW        shift and go to state 14
    BEGINSQUAD      reduce using rule 14 (before -> .)

    before                         shift and go to state 25

state 14

    (13) before -> CLOSEROW . before
    (3) before -> . CONTENT before
    (4) before -> . OPENBODY before
    (5) before -> . CLOSEBODY before
    (6) before -> . OPENHEAD before
    (7) before -> . CLOSEHEAD before
    (8) before -> . OPENDATA before
    (9) before -> . CLOSEDATA before
    (10) before -> . OPENHREF before
    (11) before -> . CLOSEHREF before
    (12) before -> . OPENROW before
    (13) before -> . CLOSEROW before
    (14) before -> .

    CONTENT         shift and go to state 6
    OPENBODY        shift and go to state 4
    CLOSEBODY       shift and go to state 5
    OPENHEAD        shift and go to state 7
    CLOSEHEAD       shift and go to state 8
    OPENDATA        shift and go to state 9
    CLOSEDATA       shift and go to state 10
    OPENHREF        shift and go to state 11
    CLOSEHREF       shift and go to state 12
    OPENROW         shift and go to state 13
    CLOSEROW        shift and go to state 14
    BEGINSQUAD      reduce using rule 14 (before -> .)

    before                         shift and go to state 26

state 15

    (2) init -> before BEGINSQUAD . skip OPENBODY rows CLOSEBODY
    (21) skip -> . CONTENT skip
    (22) skip -> . OPENHREF skip
    (23) skip -> . CLOSEHREF skip
    (24) skip -> .

    CONTENT         shift and go to state 28
    OPENHREF        shift and go to state 29
    CLOSEHREF       shift and go to state 30
    OPENBODY        reduce using rule 24 (skip -> .)

    skip                           shift and go to state 27

state 16

    (4) before -> OPENBODY before .

    BEGINSQUAD      reduce using rule 4 (before -> OPENBODY before .)


state 17

    (5) before -> CLOSEBODY before .

    BEGINSQUAD      reduce using rule 5 (before -> CLOSEBODY before .)


state 18

    (3) before -> CONTENT before .

    BEGINSQUAD      reduce using rule 3 (before -> CONTENT before .)


state 19

    (6) before -> OPENHEAD before .

    BEGINSQUAD      reduce using rule 6 (before -> OPENHEAD before .)


state 20

    (7) before -> CLOSEHEAD before .

    BEGINSQUAD      reduce using rule 7 (before -> CLOSEHEAD before .)


state 21

    (8) before -> OPENDATA before .

    BEGINSQUAD      reduce using rule 8 (before -> OPENDATA before .)


state 22

    (9) before -> CLOSEDATA before .

    BEGINSQUAD      reduce using rule 9 (before -> CLOSEDATA before .)


state 23

    (10) before -> OPENHREF before .

    BEGINSQUAD      reduce using rule 10 (before -> OPENHREF before .)


state 24

    (11) before -> CLOSEHREF before .

    BEGINSQUAD      reduce using rule 11 (before -> CLOSEHREF before .)


state 25

    (12) before -> OPENROW before .

    BEGINSQUAD      reduce using rule 12 (before -> OPENROW before .)


state 26

    (13) before -> CLOSEROW before .

    BEGINSQUAD      reduce using rule 13 (before -> CLOSEROW before .)


state 27

    (2) init -> before BEGINSQUAD skip . OPENBODY rows CLOSEBODY

    OPENBODY        shift and go to state 31


state 28

    (21) skip -> CONTENT . skip
    (21) skip -> . CONTENT skip
    (22) skip -> . OPENHREF skip
    (23) skip -> . CLOSEHREF skip
    (24) skip -> .

    CONTENT         shift and go to state 28
    OPENHREF        shift and go to state 29
    CLOSEHREF       shift and go to state 30
    OPENBODY        reduce using rule 24 (skip -> .)
    CLOSEDATA       reduce using rule 24 (skip -> .)
    CLOSEHEAD       reduce using rule 24 (skip -> .)

    skip                           shift and go to state 32

state 29

    (22) skip -> OPENHREF . skip
    (21) skip -> . CONTENT skip
    (22) skip -> . OPENHREF skip
    (23) skip -> . CLOSEHREF skip
    (24) skip -> .

    CONTENT         shift and go to state 28
    OPENHREF        shift and go to state 29
    CLOSEHREF       shift and go to state 30
    OPENBODY        reduce using rule 24 (skip -> .)
    CLOSEDATA       reduce using rule 24 (skip -> .)
    CLOSEHEAD       reduce using rule 24 (skip -> .)

    skip                           shift and go to state 33

state 30

    (23) skip -> CLOSEHREF . skip
    (21) skip -> . CONTENT skip
    (22) skip -> . OPENHREF skip
    (23) skip -> . CLOSEHREF skip
    (24) skip -> .

    CONTENT         shift and go to state 28
    OPENHREF        shift and go to state 29
    CLOSEHREF       shift and go to state 30
    OPENBODY        reduce using rule 24 (skip -> .)
    CLOSEDATA       reduce using rule 24 (skip -> .)
    CLOSEHEAD       reduce using rule 24 (skip -> .)

    skip                           shift and go to state 34

state 31

    (2) init -> before BEGINSQUAD skip OPENBODY . rows CLOSEBODY
    (15) rows -> . OPENROW OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD CLOSEROW rows
    (16) rows -> . OPENROW columns CLOSEROW rows
    (17) rows -> .

    OPENROW         shift and go to state 36
    CLOSEBODY       reduce using rule 17 (rows -> .)

    rows                           shift and go to state 35

state 32

    (21) skip -> CONTENT skip .

    OPENBODY        reduce using rule 21 (skip -> CONTENT skip .)
    CLOSEDATA       reduce using rule 21 (skip -> CONTENT skip .)
    CLOSEHEAD       reduce using rule 21 (skip -> CONTENT skip .)


state 33

    (22) skip -> OPENHREF skip .

    OPENBODY        reduce using rule 22 (skip -> OPENHREF skip .)
    CLOSEDATA       reduce using rule 22 (skip -> OPENHREF skip .)
    CLOSEHEAD       reduce using rule 22 (skip -> OPENHREF skip .)


state 34

    (23) skip -> CLOSEHREF skip .

    OPENBODY        reduce using rule 23 (skip -> CLOSEHREF skip .)
    CLOSEDATA       reduce using rule 23 (skip -> CLOSEHREF skip .)
    CLOSEHEAD       reduce using rule 23 (skip -> CLOSEHREF skip .)


state 35

    (2) init -> before BEGINSQUAD skip OPENBODY rows . CLOSEBODY

    CLOSEBODY       shift and go to state 37


state 36

    (15) rows -> OPENROW . OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD CLOSEROW rows
    (16) rows -> OPENROW . columns CLOSEROW rows
    (18) columns -> . OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENHEAD OPENHREF CONTENT CLOSEHREF CLOSEHEAD OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA
    (19) columns -> . OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENHEAD OPENHREF CONTENT CLOSEHREF CONTENT skip CLOSEHEAD OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA
    (20) columns -> . OPENDATA CLOSEDATA

    OPENHEAD        shift and go to state 38
    OPENDATA        shift and go to state 40

    columns                        shift and go to state 39

state 37

    (2) init -> before BEGINSQUAD skip OPENBODY rows CLOSEBODY .

    $end            reduce using rule 2 (init -> before BEGINSQUAD skip OPENBODY rows CLOSEBODY .)


state 38

    (15) rows -> OPENROW OPENHEAD . CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD CLOSEROW rows

    CONTENT         shift and go to state 41


state 39

    (16) rows -> OPENROW columns . CLOSEROW rows

    CLOSEROW        shift and go to state 42


state 40

    (18) columns -> OPENDATA . skip CLOSEDATA OPENDATA skip CLOSEDATA OPENHEAD OPENHREF CONTENT CLOSEHREF CLOSEHEAD OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA
    (19) columns -> OPENDATA . skip CLOSEDATA OPENDATA skip CLOSEDATA OPENHEAD OPENHREF CONTENT CLOSEHREF CONTENT skip CLOSEHEAD OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA
    (20) columns -> OPENDATA . CLOSEDATA
    (21) skip -> . CONTENT skip
    (22) skip -> . OPENHREF skip
    (23) skip -> . CLOSEHREF skip
    (24) skip -> .

  ! shift/reduce conflict for CLOSEDATA resolved as shift
    CLOSEDATA       shift and go to state 44
    CONTENT         shift and go to state 28
    OPENHREF        shift and go to state 29
    CLOSEHREF       shift and go to state 30

  ! CLOSEDATA       [ reduce using rule 24 (skip -> .) ]

    skip                           shift and go to state 43

state 41

    (15) rows -> OPENROW OPENHEAD CONTENT . CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD CLOSEROW rows

    CLOSEHEAD       shift and go to state 45


state 42

    (16) rows -> OPENROW columns CLOSEROW . rows
    (15) rows -> . OPENROW OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD CLOSEROW rows
    (16) rows -> . OPENROW columns CLOSEROW rows
    (17) rows -> .

    OPENROW         shift and go to state 36
    CLOSEBODY       reduce using rule 17 (rows -> .)

    rows                           shift and go to state 46

state 43

    (18) columns -> OPENDATA skip . CLOSEDATA OPENDATA skip CLOSEDATA OPENHEAD OPENHREF CONTENT CLOSEHREF CLOSEHEAD OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA
    (19) columns -> OPENDATA skip . CLOSEDATA OPENDATA skip CLOSEDATA OPENHEAD OPENHREF CONTENT CLOSEHREF CONTENT skip CLOSEHEAD OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA

    CLOSEDATA       shift and go to state 47


state 44

    (20) columns -> OPENDATA CLOSEDATA .

    CLOSEROW        reduce using rule 20 (columns -> OPENDATA CLOSEDATA .)


state 45

    (15) rows -> OPENROW OPENHEAD CONTENT CLOSEHEAD . OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD CLOSEROW rows

    OPENHEAD        shift and go to state 48


state 46

    (16) rows -> OPENROW columns CLOSEROW rows .

    CLOSEBODY       reduce using rule 16 (rows -> OPENROW columns CLOSEROW rows .)


state 47

    (18) columns -> OPENDATA skip CLOSEDATA . OPENDATA skip CLOSEDATA OPENHEAD OPENHREF CONTENT CLOSEHREF CLOSEHEAD OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA
    (19) columns -> OPENDATA skip CLOSEDATA . OPENDATA skip CLOSEDATA OPENHEAD OPENHREF CONTENT CLOSEHREF CONTENT skip CLOSEHEAD OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA

    OPENDATA        shift and go to state 49


state 48

    (15) rows -> OPENROW OPENHEAD CONTENT CLOSEHEAD OPENHEAD . CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD CLOSEROW rows

    CONTENT         shift and go to state 50


state 49

    (18) columns -> OPENDATA skip CLOSEDATA OPENDATA . skip CLOSEDATA OPENHEAD OPENHREF CONTENT CLOSEHREF CLOSEHEAD OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA
    (19) columns -> OPENDATA skip CLOSEDATA OPENDATA . skip CLOSEDATA OPENHEAD OPENHREF CONTENT CLOSEHREF CONTENT skip CLOSEHEAD OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA
    (21) skip -> . CONTENT skip
    (22) skip -> . OPENHREF skip
    (23) skip -> . CLOSEHREF skip
    (24) skip -> .

    CONTENT         shift and go to state 28
    OPENHREF        shift and go to state 29
    CLOSEHREF       shift and go to state 30
    CLOSEDATA       reduce using rule 24 (skip -> .)

    skip                           shift and go to state 51

state 50

    (15) rows -> OPENROW OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT . CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD OPENHEAD CONTENT CLOSEHEAD CLOSEROW rows

    CLOSEHEAD       shift and go to state 52


state 51

    (18) columns -> OPENDATA skip CLOSEDATA OPENDATA skip . CLOSEDATA OPENHEAD OPENHREF CONTENT CLOSEHREF CLOSEHEAD OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA
    (19) columns -> OPENDATA skip CLOSEDATA OPENDATA skip . CLOSEDATA OPENHEAD OPENHREF CONTENT CLOSEHREF CONTENT skip CLOSEHEAD OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA OPENDATA skip CLOSEDATA
